@@ -4,7 +4,7 @@
 ! Bug fix.
 o General comment.
 
-<h5>1.11 Beta 1  [NOT RELEASED]</h5>  Dev: Xoops 2.5.10, PHP 7.4.6
+<h5>1.11.0 Beta 1  [2022-02-20]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
 <hr>
 + delete multiple reports (luciorota)
 ! HTTP_REFERER, REMOTE_ADDR, REQUEST_URI are incorrect (luciorota)
@@ -33,6 +33,7 @@ o General comment.
     &nbsp;&nbsp;+ updated addInfoBoxLine entries (mamba)
     &nbsp;&nbsp;+ displayNavigation(basename(__FILE__))  (mamba)
     &nbsp;&nbsp;+ changed to +>displayButton('left') (mamba)
+- index.html in /preloads (mamba)
 
 
 <h5>1.01            [2014-04-23]</h5>
